--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trợ Lý Học Tập & AI</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lucide-static@latest/font/lucide.css">
   <style>
     :root {
       --main: #185adb;
@@ -21,20 +22,23 @@
       min-height: 100vh;
       background: var(--bg);
       color: #222;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
-    .header {
+    header {
       background: var(--gradient);
       color: #fff;
-      padding: 26px 0 18px 0;
+      padding: 24px 0 10px 0;
       text-align: center;
       box-shadow: var(--shadow);
     }
-    .header h1 {
-      margin: 0; font-size: 2.2rem; font-weight: 700; letter-spacing: 1.5px;
+    header h1 {
+      margin: 0; font-size: 2.1rem; font-weight: 700; letter-spacing: 1px;
       text-shadow: 0 3px 14px #0004;
     }
-    .header .slogan {
-      margin: 12px 0 0 0;
+    header .slogan {
+      margin: 10px 0 0 0;
       font-size: 1.12rem; color: #b7d2fa;
       font-weight: 400;
     }
@@ -42,9 +46,9 @@
       background: var(--menu);
       display: flex;
       justify-content: center;
-      gap: 32px;
-      padding: 0;
+      gap: 30px;
       box-shadow: 0 2px 12px #185adb22;
+      padding-bottom: 2px;
     }
     nav a {
       display: block;
@@ -60,19 +64,23 @@
       background: var(--main);
       color: #fff;
     }
-    .dashboard {
-      max-width: 950px;
-      margin: 42px auto 0 auto;
+    main {
+      flex: 1;
+      max-width: 1050px;
+      margin: 46px auto 0 auto;
       padding: 0 12px;
+    }
+    .dashboard {
       display: grid;
       grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
       gap: 28px;
+      margin-top: 16px;
     }
     .feature {
       background: #fff;
       border-radius: var(--radius);
       box-shadow: var(--shadow);
-      padding: 28px 22px 20px 22px;
+      padding: 28px 22px 22px 22px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -80,6 +88,8 @@
       transition: transform .2s, box-shadow .2s;
       cursor: pointer;
       border: 2px solid transparent;
+      text-align: center;
+      text-decoration: none !important;
     }
     .feature:hover {
       transform: translateY(-6px) scale(1.025);
@@ -94,163 +104,92 @@
       width: 58px;
       height: 58px;
       display: flex; align-items: center; justify-content: center;
-      margin-bottom: 16px;
+      margin-bottom: 14px;
       box-shadow: 0 2px 8px #185adb22;
     }
     .feature-title {
       font-weight: 700;
-      font-size: 1.14rem;
+      font-size: 1.13rem;
       margin-bottom: 8px;
-      text-align: center;
     }
     .feature-desc {
       font-size: .98rem;
       color: #334b7a;
-      text-align: center;
       margin-bottom: 6px;
       line-height: 1.4;
     }
-    /* Popup AI Chat */
-    .popup-bg {
-      position: fixed; left:0; top:0; width:100vw; height:100vh;
-      background: #0006; z-index: 100; display: none; align-items: center; justify-content: center;
+    footer {
+      background: #132043;
+      color: #a5c4fa;
+      text-align: center;
+      padding: 18px 10px 13px 10px;
+      font-size: 1.05rem;
+      margin-top: 28px;
     }
-    .popup-bg.active { display: flex; }
-    .popup {
-      background: #fff;
-      padding: 22px 10px 16px 10px;
-      border-radius: 16px;
-      box-shadow: 0 4px 24px #185adb55;
-      max-width: 95vw; max-height: 92vh;
-      display: flex; flex-direction: column; align-items: center;
-    }
-    .popup .close-btn {
-      background: var(--main);
-      color: #fff;
-      border: none;
-      border-radius: 9px;
-      padding: 5px 18px;
-      font-size: 1.12rem;
-      cursor: pointer;
-      position: absolute; right: 28px; top: 22px;
-      transition: background 0.18s;
-      z-index: 2;
-    }
-    .popup .close-btn:hover {
-      background: #222;
-    }
-    .popup iframe {
-      border-radius: 12px; border: none;
-      box-shadow: 0 2px 12px #185adb30;
-      width: 350px; height: 480px;
-      background: #fff;
-      margin-top: 16px;
-      max-width: 90vw;
-    }
+    /* Responsive */
     @media (max-width:800px) {
       .dashboard { grid-template-columns: 1fr; margin-top: 18px; }
       .feature { padding: 20px 10px 14px 10px;}
     }
-    @media (max-width:450px) {
-      .popup iframe { width: 98vw; height: 60vh;}
-      .popup { padding: 10px 2vw;}
+    @media (max-width:500px) {
+      header h1 { font-size: 1.15rem;}
+      .feature { padding: 13px 2vw 8px 2vw;}
     }
-    /* Hiệu ứng sao rơi đơn giản */
     .star-canvas {
       position: fixed; left:0; top:0; z-index:0; pointer-events:none; width:100vw; height:100vh;
     }
   </style>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lucide-static@latest/font/lucide.css">
 </head>
 <body>
   <canvas class="star-canvas"></canvas>
-  <div class="header">
+  <header>
     <h1>Tra Cứu Học Thuật & AI</h1>
     <div class="slogan">Nền tảng học tập & trợ lý AI – Dễ dàng, hiệu quả, thông minh!</div>
-  </div>
+  </header>
   <nav>
-    <a href="#" class="active">Trang chủ</a>
-    <a href="#tailieu">Tài liệu học tập</a>
-    <a href="#ai-chat">Chat với AI</a>
-    <a href="#mindmap">Tạo mindmap</a>
-    <a href="#y-tuong">Gợi ý ý tưởng</a>
-    <a href="#vietlai">Viết lại nội dung</a>
+    <a href="index.html" class="active">Trang chủ</a>
+    <a href="tailieu.html">Tài liệu học tập</a>
+    <a href="chat-ai.html">Chat với AI</a>
+    <a href="mindmap.html">Tạo mindmap</a>
+    <a href="y-tuong.html">Gợi ý ý tưởng</a>
+    <a href="viet-lai.html">Viết lại nội dung</a>
   </nav>
-  <div class="dashboard">
-    <div class="feature" onclick="openPopup('ai')">
-      <div class="feature-icon"><i class="lucide-message-circle"></i></div>
-      <div class="feature-title">Chat với AI</div>
-      <div class="feature-desc">Tra cứu, hỏi đáp nhanh mọi lĩnh vực học tập cùng trợ lý AI.</div>
+  <main>
+    <div style="font-size:1.13rem; color:#185adb; text-align:center; margin-bottom: 18px; font-weight:600;">
+      Chào mừng bạn đến với nền tảng học tập tích hợp AI hỗ trợ – Hãy chọn chức năng bạn cần!
     </div>
-    <div class="feature" onclick="location.href='#tailieu'">
-      <div class="feature-icon"><i class="lucide-book-open"></i></div>
-      <div class="feature-title">Tài liệu học tập</div>
-      <div class="feature-desc">Cung cấp các tài liệu PDF, slide, đề cương, sách tham khảo miễn phí.</div>
+    <div class="dashboard">
+      <a class="feature" href="chat-ai.html">
+        <div class="feature-icon"><i class="lucide-message-circle"></i></div>
+        <div class="feature-title">Chat với AI</div>
+        <div class="feature-desc">Tra cứu, hỏi đáp mọi lĩnh vực học tập cùng trợ lý AI.</div>
+      </a>
+      <a class="feature" href="tailieu.html">
+        <div class="feature-icon"><i class="lucide-book-open"></i></div>
+        <div class="feature-title">Tài liệu học tập</div>
+        <div class="feature-desc">Cung cấp tài liệu PDF, slide, đề cương, sách tham khảo miễn phí.</div>
+      </a>
+      <a class="feature" href="mindmap.html">
+        <div class="feature-icon"><i class="lucide-network"></i></div>
+        <div class="feature-title">Tạo mindmap thông minh</div>
+        <div class="feature-desc">Tạo sơ đồ tư duy online, hỗ trợ xuất ảnh hoặc PDF, miễn phí.</div>
+      </a>
+      <a class="feature" href="y-tuong.html">
+        <div class="feature-icon"><i class="lucide-sparkles"></i></div>
+        <div class="feature-title">Gợi ý ý tưởng học tập</div>
+        <div class="feature-desc">AI gợi ý ý tưởng, chủ đề thuyết trình, nghiên cứu, bài tập nhóm…</div>
+      </a>
+      <a class="feature" href="viet-lai.html">
+        <div class="feature-icon"><i class="lucide-pen"></i></div>
+        <div class="feature-title">Viết lại nội dung</div>
+        <div class="feature-desc">Nhờ AI diễn đạt lại văn bản, tóm tắt, tăng sự sáng tạo.</div>
+      </a>
     </div>
-    <div class="feature" onclick="openPopup('mindmap')">
-      <div class="feature-icon"><i class="lucide-network"></i></div>
-      <div class="feature-title">Tạo mindmap thông minh</div>
-      <div class="feature-desc">Tạo sơ đồ tư duy online, hỗ trợ xuất ảnh hoặc PDF, miễn phí.</div>
-    </div>
-    <div class="feature" onclick="openPopup('idea')">
-      <div class="feature-icon"><i class="lucide-sparkles"></i></div>
-      <div class="feature-title">Gợi ý ý tưởng học tập</div>
-      <div class="feature-desc">AI gợi ý ý tưởng, chủ đề thuyết trình, nghiên cứu, bài tập nhóm…</div>
-    </div>
-    <div class="feature" onclick="openPopup('rewrite')">
-      <div class="feature-icon"><i class="lucide-pen"></i></div>
-      <div class="feature-title">Viết lại nội dung</div>
-      <div class="feature-desc">Nhờ AI diễn đạt lại văn bản, tóm tắt, tăng sự sáng tạo.</div>
-    </div>
-    <div class="feature" onclick="alert('Sắp ra mắt!')">
-      <div class="feature-icon"><i class="lucide-folder-open"></i></div>
-      <div class="feature-title">Quản lý file & đề thi</div>
-      <div class="feature-desc">Lưu trữ đề thi, bài kiểm tra, chia sẻ cho mọi người (sắp ra mắt).</div>
-    </div>
-  </div>
-
-  <!-- Popup chat AI -->
-  <div class="popup-bg" id="aiPopup">
-    <div class="popup">
-      <button class="close-btn" onclick="closePopup('ai')">Đóng</button>
-      <div style="font-weight:600;font-size:1.1rem;color:#185adb">Chat với AI hỗ trợ học tập</div>
-      <iframe src="https://www.chatbase.co/chatbot-iframe/LqqF_1Q5mDRgBiRX2Kpb_" allow="clipboard-write"></iframe>
-    </div>
-  </div>
-  <!-- Popup mindmap -->
-  <div class="popup-bg" id="mindmapPopup">
-    <div class="popup">
-      <button class="close-btn" onclick="closePopup('mindmap')">Đóng</button>
-      <div style="font-weight:600;font-size:1.1rem;color:#185adb">Tạo mindmap online (miễn phí)</div>
-      <iframe src="https://www.mindmeister.com/map/2750851527" title="Mindmap"></iframe>
-    </div>
-  </div>
-  <!-- Popup idea -->
-  <div class="popup-bg" id="ideaPopup">
-    <div class="popup">
-      <button class="close-btn" onclick="closePopup('idea')">Đóng</button>
-      <div style="font-weight:600;font-size:1.1rem;color:#185adb">AI gợi ý ý tưởng học tập</div>
-      <iframe src="https://yuntian-deng-chatgpt.hf.space" title="Gợi ý ý tưởng"></iframe>
-    </div>
-  </div>
-  <!-- Popup rewrite -->
-  <div class="popup-bg" id="rewritePopup">
-    <div class="popup">
-      <button class="close-btn" onclick="closePopup('rewrite')">Đóng</button>
-      <div style="font-weight:600;font-size:1.1rem;color:#185adb">AI Viết lại nội dung</div>
-      <iframe src="https://quillbot.com/" title="Viết lại nội dung"></iframe>
-    </div>
-  </div>
-
-  <!-- Hiệu ứng sao rơi đơn giản -->
+  </main>
+  <footer>
+    &copy; 2025 Tra Cứu Học Thuật & AI &bull; Thiết kế bởi KoHa
+  </footer>
   <script>
-    // Popups
-    function openPopup(id) {
-      document.getElementById(id+'Popup').classList.add('active');
-    }
-    function closePopup(id) {
-      document.getElementById(id+'Popup').classList.remove('active');
-    }
     // Hiệu ứng sao rơi
     const canvas = document.querySelector('.star-canvas');
     const ctx = canvas.getContext('2d');
